fix for java 7